safari gap bug fix

--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ details summary::-webkit-details-marker {
     font-size: var(--fs-400);
     list-style-type:none;
     margin: 0 auto;
-    padding: 10px 20px 10px 10px;
+    padding: 10px 20px 0px 10px;
     text-align: left;
 }
 
